# learn-cmake-linux

./: CMakeLists.txt  main.cpp
include/: FIR.h
source/: FIR.cpp
